* 0.2.1 (2008-10-13):
  - Fixed a bug where attributes with dashes would crash the party

* 0.2.0 (2008-10-13):
  - Broke backwards compatibility
  - XMLRecord.new now returns decorated String or Array objects, so that
    access to elements, attributes, and "collection" values is consistent
  - While Strings are no longer auto-typecast to float or int, they now
    have, whenever possible, a question-mark form, which attemps to
    returns booleans for strings like "Yes" and "false"
  - XMLRecord.new can now take a filename or a file object
  - Added more tests

* 0.1.3 (2008-10-10):
  - Switched tests to use test/spec
  - Added XMLStruct#to_obj to return the corresponding Ruby object value
  - Added XMLStruct#to_raw_xml to return the REXML object
  - Added documentation on auto-typecasting behaviour caveat

* 0.1.2 (2008-10-10):
  - Documentation

* 0.1.1 (2008-10-10):
  - First "release" ;)